--- a/pages/work.html
+++ b/pages/work.html
@@ -141,6 +141,10 @@
             </svg>
             Mail Box
           </a></li>
+        <li><a class="nLink" href="./meetings.html">
+            <i class="fa-solid fa-video"></i>
+            Mettings
+          </a></li>
         <li><a class="nLink" href="./users.html">
             <svg width="22" height="24" viewBox="0 0 22 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -173,7 +177,7 @@
       <!-- Start Main Content -->
       <div class="pageCont">
         <div class="conta p30">
-          <h3> Our Work :  </h3>
+          <h3> Our Work : </h3>
         </div>
         <div class="conta p30">
           <div class="wbtns">
@@ -183,11 +187,11 @@
             <table class="tg">
               <thead>
                 <tr>
-                  <th>Project Image  </th>
-                  <th>Project EN Title  </th>
-                  <th>Project EN Description  </th>
-                  <th>Project AR Title  </th>
-                  <th>Project AR Description  </th>
+                  <th>Project Image </th>
+                  <th>Project EN Title </th>
+                  <th>Project EN Description </th>
+                  <th>Project AR Title </th>
+                  <th>Project AR Description </th>
                   <th>Tools</th>
                 </tr>
               </thead>
