--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -141,6 +141,10 @@
             </svg>
             Mail Box
           </a></li>
+          <li><a class="nLink" href="./meetings.html">
+            <i class="fa-solid fa-video"></i>
+              Mettings
+            </a></li>
         <li><a class="nLink" href="./users.html">
             <svg width="22" height="24" viewBox="0 0 22 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
