--- a/pages/add-project.html
+++ b/pages/add-project.html
@@ -186,6 +186,10 @@
               <span>Project Name :</span>
               <input type="text" placeholder="Project Name :">
             </div>
+            <div class="input">
+              <span>Project Tags “SEO” :</span>
+              <textarea name="" id="" placeholder="write here ..."></textarea>
+            </div>
             <div class="twoIns">
               <div class="input">
                 <span>Project EN Category :</span>
